# RL-project

./: pyproject.toml  train.py
models/: MC_agent.npy  MC_agent_best.npy  SARSA_agent.npy  SARSA_agent_best.npy  benchmark_results.pkl  mc_sweep_results.pkl  sarsa_sweep_results.pkl
notebooks/: notebook.ipynb
report/: samplepaper.aux  samplepaper.fdb_latexmk  samplepaper.fls  samplepaper.out  samplepaper.tex
src/project/: agents.py  utils.py
