[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fotis", email = "fotiskapotos@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
project = "project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
